--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>CustomObject</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>Profile</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>PermissionSet</name>
-    </types>
-    <version>52.0</version>
+	<types>
+		<members>Account.Also_Known_As__c</members>
+		<members>Account.Company_Marketing_Status__c</members>
+		<members>Account.Company_Revenue_MM__c</members>
+		<members>Account.Sector__c</members>
+		<members>Account.Source_ID__c</members>
+		<members>Contact.Consent__c</members>
+		<members>Contact.Goes_By__c</members>
+		<members>Contact.Maiden_Previous_Name__c</members>
+		<members>Contact.Source_ID__c</members>
+		<members>Contact.Twitter_Handle__c</members>
+		<name>CustomField</name>
+	</types>
+	<types>
+		<members>Account</members>
+		<members>Contact</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>*</members>
+		<name>PermissionSet</name>
+	</types>
+	<types>
+		<members>MarketingProfile</members>
+		<members>Standard</members>
+		<name>Profile</name>
+	</types>
+	<version>51.0</version>
 </Package>
